--- a/serenity.properties
+++ b/serenity.properties
@@ -1,15 +1,11 @@
 # Appears at the top of the reports
 serenity.project.name=Moo Code Test
 
-# Root package for any JUnit acceptance tests
 serenity.test.root=com.moo.features
 
-#serenity.requirement.types=feature
 
-# Run the tests without calling webdriver - useful to check your JUnit wireing
-#serenity.dry.run=true
-
-# Customise browser size
-#serenity.browser.height = 1200
-#serenity.browser.width = 1200
+serenity.maintain.session=true
+webdriver.wait.for.timeout=5000
+webdriver.timeouts.implicitlywait=5000
+serenity.timeout=5000
 
